Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -743,7 +743,7 @@ Fig.~\ref{pol_complex_map} represents the coding of political complexity for the
 
 \begin{sidewaysfigure}
 \centering
-\includegraphics[width=\textwidth]{map_pol_complex.png}
+\includegraphics[width=0.8\textwidth]{map_pol_complex.png}
 \caption[Map of Remote Oceania: Political complexity]{{Map of Remote Oceania with associated values for political complexity (EA033).}}
 \label{pol_complex_map}
 \end{sidewaysfigure}
@@ -765,7 +765,7 @@ For comparison across island groups, the oldest settlement order per group was u
 
 \begin{sidewaysfigure}
 \centering
-\includegraphics[width=\textwidth]{Map_RO_dates.png}
+\includegraphics[width=0.8\textwidth]{Map_RO_dates.png}
 \caption{{Map of island groups in Remote Oceania labelled with settlement order.}}
 \label{dates_map}
 \end{sidewaysfigure}
@@ -839,13 +839,14 @@ Figs \ref{fig:un_pop_plot} and \ref{fig:un_pop_plot_log10} show the relationship
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=.8\linewidth]{number_of_languages_vs_pop_1950.png}
+    \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950.png}
     \caption{Population in 1950 per country (x-axis) and number of languages per country (y-axis). Dark blue triangles = countries with at least some landmasses in Remote Oceania, green circles = all other countries.}
         \label{fig:un_pop_plot}
     \end{figure}
+    
 \begin{figure}[ht]
     \centering
-          \includegraphics[width=.8\linewidth]{number_of_languages_vs_pop_1950_log10.png}
+          \includegraphics[width=.7\textwidth]{number_of_languages_vs_pop_1950_log10.png}
     \caption{Population in 1950 per country (x-axis) and number of languages per country (y-axis) - log-10-transformed. Dark blue triangles = countries with at least some landmasses in Remote Oceania, green circles = all other countries.}
     \label{fig:un_pop_plot_log10}
     \end{figure}
@@ -853,7 +854,7 @@ Figs \ref{fig:un_pop_plot} and \ref{fig:un_pop_plot_log10} show the relationship
 While it is not possible to include population size as a variable, it is possible that the environmental variables are relevant here as they may suggest island groups that could be home to larger populations. Fig. \ref{SPLOM_country_all_variables} shows the relationship between the population data and language count data above to the variables of this study. The first four rows represent the data summarised per entire countries  (i.e. from  \citet{UN_pop} and \citet{glottolog4_5}) and the rest are per island group in Remote Oceania. This means there is a mismatch of units of analysis, for example: Hawai'i is a part of the United States of America and therefore is included in the data point for the entire USA. The ``lg count (island group)'' contains only the number of languages in Hawai'i in the island groups included in this study, i.e. 1.
 
 \begin{figure}[ht]
-    \includegraphics[width=15cm]{latex/SPLOM_country_all_variables.png}
+    \includegraphics[width=\textwidth]{latex/SPLOM_country_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over countries. Note that the population data is taken from \citet{UN_pop} and refers to the whole country, i.e. the population of the entire USA --- not just Hawai'i..}
 \label{SPLOM_country_all_variables}
 \end{figure}
@@ -917,7 +918,7 @@ This dataset does not contain information on population size because there is no
 
 \begin{sidewaysfigure}[p] 
 
-\includegraphics[width=19cm]{Predicting_lgs_DAG_full.png}
+\includegraphics[width=\textwidth]{Predicting_lgs_DAG_full.png}
 \caption{Directed Acyclic Graph of the variables in this study. Blue = variable to be predicted (response).}
 \label{Predicting_lgs_DAG_full}
 \end{sidewaysfigure}
@@ -1011,38 +1012,38 @@ Following the principles of Bayesian Analysis Reporting Guidelines \citep{krusch
 
 \begin{figure}[ht]
 
-\includegraphics[width=15cm]{brms_SBZR_group_full_effect_ridge_panels_plot.png}
+\includegraphics[width=\textwidth]{brms_SBZR_group_full_effect_ridge_panels_plot.png}
 \caption{Coefficient distribution of BRMS model, using overnight sailing distances island groups with all observations.}
 \label{brms_SBZR_group_full_effect_ridge_panels}
 \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[width=15cm]{brms_medium_group_full_effect_ridge_panels_plot.png}
+\includegraphics[width=\textwidth]{brms_medium_group_full_effect_ridge_panels_plot.png}
 \caption{Coefficient distribution of BRMS model, using shared-language island groups with all observations.}
 \label{brms_medium_group_full_effect_ridge_panels}
 \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[width=15cm]{brms_SBZR_dropped_out_plot_diff.png}
+\includegraphics[width=\textwidth]{brms_SBZR_dropped_out_plot_diff.png}
 \caption{Mean absolute difference of predicted and observed number of languages per island group (overnight sailing distances group). Every column represents a new run of the model with a particular group dropped out from the observations. When Vanuatu + Temotu is dropped out, the model predicts numbers that are more similar to the observed values than when that island group is included in the model.}
 \label{brms_SBZR_dropped_out_plot_diff}
 \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[width=15cm]{brms_medium_dropped_out_plot_diff.png}
+\includegraphics[width=\textwidth]{brms_medium_dropped_out_plot_diff.png}
 \caption{Mean absolute difference of predicted and observed number of languages per island group (shared language grouping). Every column represents a new run of the model with a particular group dropped out from the observations. When Malakula is dropped out, the model predicts numbers that are more similar to the observed values than when that island group is included in the model.}
 \label{brms_medium_dropped_out_plot_diff}
 \end{figure}
 
 
 \begin{figure}[ht]
-\includegraphics[width=15cm]{latex/SPLOM_SBZR_all_variables.png}
+\includegraphics[width=\textwidth]{latex/SPLOM_SBZR_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over overnight-sailing-groups.}
 \label{SPLOM_SBZR_all_variables}
 \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[width=15cm]{latex/SPLOM_medium_all_variables.png}
+\includegraphics[width=\textwidth]{latex/SPLOM_medium_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over shared-language-groups.}
 \label{SPLOM_medium_all_variables}
 \end{figure}
