--- a/latex/BRMS_effects_medium.tex
+++ b/latex/BRMS_effects_medium.tex
@@ -1,22 +1,22 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 21:41:25 2023
+% Fri Aug 25 17:55:04 2023
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
 term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Does 95\% interval straddle zero? & Bulk ESS & Tail ESS \\ 
   \midrule
-EA033 & -0.848 & 0.119 & -1.089 & -0.621 & no & 86903.116 & 78680.772 \\ 
-  environ\_PC1 & -0.339 & 0.184 & -0.700 & 0.022 & yes & 62722.893 & 72819.676 \\ 
-  environ\_PC1:Shoreline & 0.173 & 0.142 & -0.096 & 0.460 & yes & 56177.329 & 72113.543 \\ 
-  environ\_PC2 & 0.191 & 0.199 & -0.202 & 0.577 & yes & 55715.732 & 68364.257 \\ 
-  environ\_PC3 & 0.166 & 0.144 & -0.117 & 0.448 & yes & 77362.236 & 78385.290 \\ 
-  Intercept & 0.260 & 0.168 & -0.080 & 0.583 & yes & 69183.952 & 73793.051 \\ 
-  Time depth & 0.482 & 0.136 & 0.224 & 0.758 & yes & 85944.050 & 77272.546 \\ 
-  Shoreline & 0.640 & 0.175 & 0.300 & 0.992 & yes & 57283.173 & 69766.242 \\ 
-  Shoreline:environ\_PC2 & -0.343 & 0.190 & -0.700 & 0.048 & yes & 60024.526 & 67019.249 \\ 
-  Shoreline:environ\_PC3 & 0.097 & 0.124 & -0.158 & 0.330 & yes & 75070.000 & 75363.372 \\ 
-  Shoreline:Time depth & 0.452 & 0.128 & 0.210 & 0.714 & yes & 90331.190 & 73841.991 \\ 
+EA033 & -0.854 & 0.119 & -1.093 & -0.626 & no & 84425.289 & 81421.505 \\ 
+  environ\_PC1 & -0.389 & 0.197 & -0.776 & -0.004 & no & 53786.906 & 72777.062 \\ 
+  environ\_PC1:Shoreline & 0.145 & 0.146 & -0.130 & 0.441 & yes & 51663.978 & 71060.623 \\ 
+  environ\_PC2 & 0.196 & 0.198 & -0.194 & 0.586 & yes & 53715.694 & 71858.101 \\ 
+  environ\_PC3 & 0.109 & 0.135 & -0.158 & 0.371 & yes & 75057.067 & 79671.438 \\ 
+  Intercept & 0.248 & 0.170 & -0.093 & 0.574 & yes & 58590.121 & 72978.752 \\ 
+  Time depth & 0.468 & 0.135 & 0.214 & 0.743 & yes & 86204.009 & 74655.200 \\ 
+  Shoreline & 0.632 & 0.174 & 0.296 & 0.980 & yes & 53563.638 & 70289.754 \\ 
+  Shoreline:environ\_PC2 & -0.353 & 0.182 & -0.697 & 0.019 & yes & 56356.997 & 64884.923 \\ 
+  Shoreline:environ\_PC3 & 0.207 & 0.138 & -0.070 & 0.473 & yes & 63281.946 & 74922.550 \\ 
+  Shoreline:Time depth & 0.488 & 0.131 & 0.241 & 0.754 & yes & 88157.074 & 78784.599 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, shared-language island groups (all observations included).} 
